plugins {
    id 'java-library'
    id 'application'
    id 'idea'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'maven-publish'
}

group = 'com.sinergise.sentinel'
version = '0.7.4'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    withJavadocJar()
    withSourcesJar()
}

repositories {
    mavenCentral()
}

idea {
    module {
        outputDir file('build/classes/main')
        testOutputDir file('build/classes/test')
    }
}

test {
    useJUnitPlatform()
}

shadowJar {
//    removes '-all' suffix from .jar file
    classifier = ''
}

ext {
    jerseyVersion = '2.28'
    lombokVersion = '1.18.16'
    log4jVersion = '2.12.1'
    junitVersion = '5.5.2'
}

dependencies {

    implementation platform('com.google.cloud:libraries-bom:20.4.0')
    implementation platform('io.grpc:grpc-bom:1.37.1')
    compile 'com.google.cloud:google-cloud-storage'

    implementation "info.picocli:picocli:4.0.4"
    implementation "org.locationtech.jts:jts-core:1.16.1"
    api "software.amazon.awssdk:s3:2.10.8"
    implementation "com.twelvemonkeys.imageio:imageio-tiff:3.4.2"
    implementation "org.wololo:jts2geojson:0.14.3"
    implementation "de.grundid.opendatalab:geojson-jackson:1.12"
    implementation "commons-cli:commons-cli:1.4"

    implementation "org.glassfish.jersey.core:jersey-client:$jerseyVersion"
    implementation "org.glassfish.jersey.inject:jersey-hk2:$jerseyVersion"
    implementation "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyVersion"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.10.1"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.1"

    // lombok
    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"

    // logging
    api "org.apache.logging.log4j:log4j-api:$log4jVersion"
    implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"

    // required with newer JDKs
    implementation 'javax.activation:activation:1.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

    // testing
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
}

application {
    mainClassName = "com.sinergise.sentinel.byoctool.ByocTool"
}

// creates a slim JDK runtime for distribution
task createRuntime(type: Exec) {
    doFirst() {
        project.delete("${buildDir}/runtime")
    }
    String runtimePath = "${buildDir}/runtime"

    workingDir project.projectDir
    commandLine = [
            "${System.getenv("JLINK_HOME")}/bin/jlink",
            '--add-modules', 'java.base,java.desktop,jdk.unsupported,java.management,java.scripting,java.logging,java.sql,java.naming',
            '--strip-debug',
            '--no-header-files',
            '--no-man-pages',
            "--compress=2",
            '--output', runtimePath
    ]
}

// creates application bundle (executable + runtime)
task jpackage(type: Exec, dependsOn: shadowJar) {
    dependsOn createRuntime
    workingDir project.projectDir
    commandLine = [
            "${System.getenv("JPACKAGE_HOME")}/bin/jpackage",
            '--input', "${buildDir}/libs",
            '--name', project.name,
            '--main-class', project.mainClassName,
            '--main-jar', "byoc-tool.jar",
            '--runtime-image', "${buildDir}/runtime",
            '--java-options', '-Dlog4j2.disable.jmx=true'
    ]
}

distTar {
    archiveName "byoc-tool.tar"
}


publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            versionMapping {
                usage('java-api') {
                    fromResolutionOf('runtimeClasspath')
                }
                usage('java-runtime') {
                    fromResolutionResult()
                }
            }
        }
    }

    repositories {
        maven {
            credentials {
                username System.getenv('artifactoryUser')
                password System.getenv('artifactoryPassword')
            }
            url "${System.getenv('artifactoryUrl')}/libs-custom-local"
        }
    }
}

